--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
       </div>
     </div>
 
-    <p id="action-message">Make your mave</p>
+    <p id="action-message">Make your mave.</p>
   </body>
 </html>
