--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 
     <div class="choices">
       <div class="choice" id="r">
-        <img src="" alt="">
+        <img src="Rock.png" alt="">
       </div>
       <div class="choice" id="p">
-        <img src="" alt="">
+        <img src="Paper.png" alt="">
       </div>
       <div class="choice" id="s">
-        <img src="" alt="">
+        <img src="Scissors.png" alt="">
       </div>
     </div>
 
