--- a/index.html
+++ b/index.html
@@ -33,5 +33,8 @@
     </div>
 
     <p id="action-message">Make your mave.</p>
+    <script src="app.js" type="text/javascript">
+
+    </script>
   </body>
 </html>
